feat: Users management (webui)
